--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+body{
+    padding: 0;
+    margin: o;
+    box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:  hsl(218, 23%, 16%);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.advice-container{
+    display: grid;
+    justify-content: center;
+    place-items: center;
+    background-color:  hsl(217, 19%, 24%);
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .8);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.advice-contents{
+    display: grid;
+    justify-content: center;
+    place-items: center;
+    gap: 2vh;
 }
-
-.App-link {
-  color: #61dafb;
+.advice-contents p{
+    color: white;
+    text-align: center;
 }
+.dice-con{
+    background: hsl(150, 100%, 66%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    border-radius: 15px;
+    margin-bottom: -2vh;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+#dice{
+    transform: scale(0.7);
+    margin: 4px;
+}
+.advice{
+    margin-top: 0;
+    width: 30vw;
+    
+}
+#divider{
+    transform: scale(0.9);
+}
+.advice-title{
+    color: hsl(150, 100%, 66%);
+}
+.title{
+    word-spacing: 5px;
+}
+@media (width<= 600px) {
+    .advice{
+        margin-top: 0;
+        width: 45vw;
+      
+    }
+}
+@media (width<= 430px) {
+    .advice{
+        margin-top: 0;
+        width: 65vw;
+       
+    }
 }
